<resources>
    <string name="app_name" translatable="false">NotesFinalProject</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="please_login_credentials">Please login with your credentials</string>

    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="password_confirm">Confirm password</string>

    <string name="dont_have_an_account">Don\'t have an account yet ?</string>
    <string name="create_account_here">Create an account here</string>
    <string name="login">Login</string>

    <string name="create_account">Create Account</string>
    <string name="lets_get_to_know_you">Let\'s get to know you !</string>
    <string name="enter_details_continue">Enter your details to continue</string>

    <string name="agree_terms_use">By clicking the “CREATE ACCOUNT” button, you agree to Terms of use and Privacy Policy</string>

    <string name="login_name_empty">Name is empty</string>
    <string name="login_email_empty">Email is empty</string>
    <string name="login_password_empty">Password is empty</string>
    <string name="login_password_confirm_empty">Confirm password is empty</string>
    <string name="login_passwords_dont_match">Passwords are different</string>
    <string name="login_name_minimum">Name has a minimum of %s characters</string>
    <string name="login_password_minimum">Password has a minimum of %s characters</string>

    <string name="hello_user">Hello %s</string>
    <string name="your_notes">Your Notes</string>
    <string name="note_no_title">(No title)</string>
    <string name="create_your_first_note">Create your first note !</string>

    <plurals name="note_days_ago">
        <item quantity="one">%s day ago</item>
        <item quantity="other">%s days ago</item>
    </plurals>

    <string name="edit_note">Edit Note</string>
    <string name="title">Title</string>
    <string name="type_something">Type something…</string>
    <string name="note_delete">Delete note</string>
    <string name="note_deleted">Note deleted</string>
    <string name="select_color">Select Color</string>

    <string name="logout">Logout</string>
    <!-- Samples -->
    <string name="sample_long_1" translatable="false">Book Review: The Design of Everyday Thing by Don Norman</string>
</resources>