<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_background_1"
    tools:context=".presentation.login.LoginFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_start"
        android:layout_marginTop="@dimen/default_margin_top"
        android:layout_marginEnd="@dimen/default_margin_end"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtWelcomeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txtWelcomeDescription"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtTitle"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtWelcomeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/please_login_credentials"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/txtEmail"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtWelcomeTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtEmail"
        style="@style/BaseTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textColorHint="@color/base_text_2"
        app:hintTextColor="@color/base_color_1"
        app:layout_constraintBottom_toTopOf="@id/txtPassword"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        app:layout_constraintVertical_chainStyle="packed"
        app:startIconDrawable="@drawable/ic_email_24"
        app:startIconTint="@color/base_color_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/base_text_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/BaseTextInputLayoutStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/password"
        android:textColorHint="@color/base_text_2"
        app:hintTextColor="@color/base_color_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtEmail"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/base_boxes_1"
        app:startIconDrawable="@drawable/ic_password_24"
        app:startIconTint="@color/base_color_1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/base_text_1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtCreateAccountDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/dont_have_an_account"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/txtCreateAccountAction"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtPassword"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/txtCreateAccountAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_account_here"
        android:textColor="@color/base_color_1"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintTop_toBottomOf="@id/txtCreateAccountDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:alpha="0.5"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/white"
        app:backgroundTint="@color/base_color_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/txtTitle"
        app:layout_constraintStart_toStartOf="@id/txtTitle"
        app:layout_constraintWidth_percent="0.85" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:cardBackgroundColor="@color/transparent_background"
        app:cardCornerRadius="0dp"
        app:rippleColor="@color/transparent"
        app:strokeWidth="0dp"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleX="0.15"
            android:scaleY="0.15" />
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>